--- a/notebooks/Jet_Energy_Corrections.ipynb
+++ b/notebooks/Jet_Energy_Corrections.ipynb
@@ -45,7 +45,7 @@
     "fname = \"/work/projects/hats2024/jets/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/106X_upgrade2018_realistic_v16_L1v1-v1/2520000/130AF209-596A-BA46-BA9E-D8847511BB0F.root\"\n",
     "\n",
     "### if you need to run at the cmslpc\n",
-    "# fname = \"/eos/user/c/cmsdas/2024/short-ex-jet/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/106X_upgrade2018_realistic_v16_L1v1-v1/2520000/130AF209-596A-BA46-BA9E-D8847511BB0F.root\"\n",
+    "# fname = \"root://cmseos.fnal.gov//store/user/cmsdas/2024/short_exercises/jets/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/106X_upgrade2018_realistic_v16_L1v1-v1/2520000/130AF209-596A-BA46-BA9E-D8847511BB0F.root\"\n",
     "\n",
     "events = NanoEventsFactory.from_root( fname, schemaclass=NanoAODSchema.v6).events()"
    ]
@@ -285,8 +285,8 @@
     "### jet corrections uncertainties\n",
     "corr = jerc_corr[\"Summer19UL18_V5_MC_Total_AK4PFchs\"]\n",
     "flat_jec_unc = corr.evaluate( j['eta'], j['pt_raw'] )\n",
-    "flat_jec_unc_up = np.ones(len(j)) + flat_jec_unc\n",
-    "flat_jec_unc_down = np.ones(len(j)) - flat_jec_unc\n",
+    "flat_jec_unc_up = flat_jec + flat_jec_unc\n",
+    "flat_jec_unc_down = flat_jec - flat_jec_unc\n",
     "\n",
     "jec_unc_up = ak.unflatten( flat_jec_unc_up, nj )\n",
     "jec_unc_down = ak.unflatten( flat_jec_unc_down, nj )\n",
@@ -318,7 +318,7 @@
     "hists_unc = (\n",
     "    hist.Hist.new\n",
     "    .StrCat([\"nominal\", \"up\", 'down'], name=\"unc\")\n",
-    "    .Reg(100, 0, 1000, name=\"pt\", label='jet pt')\n",
+    "    .Reg(50, 0, 1000, name=\"pt\", label='jet pt')\n",
     "    .Weight()\n",
     "    .fill(\n",
     "        unc='nominal',\n",
