--- a/notebooks/Jets_101.ipynb
+++ b/notebooks/Jets_101.ipynb
@@ -73,7 +73,7 @@
     "fname = \"/work/projects/hats2024/jets/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2520000/47A0D984-2D6F-0D42-B5CB-906786434349.root\"\n",
     "\n",
     "### if you need to run at the cmslpc\n",
-    "# fname = \"/eos/user/c/cmsdas/2024/short-ex-jet/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2520000/47A0D984-2D6F-0D42-B5CB-906786434349.root\"  \n",
+    "# fname = \"root://cmseos.fnal.gov//store/user/cmsdas/2024/short_exercises/jets/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2520000/47A0D984-2D6F-0D42-B5CB-906786434349.root\"\n",
     "\n",
     "events = NanoEventsFactory.from_root( fname, schemaclass=JMENanoAODSchema).events()"
    ]
