--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -31,14 +31,14 @@ keypoints:
 
 ### Jets as signatures of quarks and gluons
 
-Most collisions at hadron colliders involve quarks scattering. Proton collisions are really gluon and quark collisions. Proton contain quarks and gluons.
+Most collisions at hadron colliders involve quarks scattering. Protons contain quarks and gluons. Proton collisions are really gluon and quark collisions.
 
 <figure>
   <img src="../fig/episode1/jets101_1.svg" alt="" style="width:50%">
   <center><figcaption>Parton showering    → Hadronization   → Jet of color neutral particles</figcaption></center>
 </figure>
 
-Only particles in "color singlet” state are observed in nature, due to color confinement. The kinematic properties of the jet intent to resemble that of the initial partons. What we try to do in our detectors is to measure the decay products to get access to particle/parton level:
+Only particles in "color singlet” state are observed in nature, due to color confinement. The kinematic properties of the jet are intended to resemble that of the initial partons. What we try to do wirh our detectors is to measure the decay products to get access to particle/parton level:
 
 <figure>
   <img src="../fig/episode1/jets101_2.svg" alt="" style="width:50%">
@@ -48,27 +48,27 @@ Only particles in "color singlet” state are observed in nature, due to color c
 > ## What is the composition of jets?
 >
 > Energy composition: About 65% charged hadrons, 25% neutral pions (photons), 10% neutral hadrons.
-> <img src="../fig/episode1/jets101_7.svg" alt="" style="width:50%">
+> <img src="../fig/episode1/jets101_7.svg" alt="" style="width:70%">
 {: .callout}
 
 ### What is a jet?
 
 > ## Looking at an event display from our data
-> <img src="../fig/episode1/jets101_3.svg" alt="" style="width:50%">
+> <img src="../fig/episode1/jets101_3.svg" alt="" style="width:60%">
 > How do you determine which particles are included in a jet?
 {: .discussion}
 
 From a list of particles one can form jets, an object to reconstruct the shower of particles produced from a quark or gluon. Each particle belonging to a jet is known as a constituent. Each has a 4-vector that can be used for further studies. This give us a more generalised picture: _Almost everything becomes a jet: g/q/t/W/Z/H/PU_ 
 
-We need a jet algorithm to collect the particles in a shower. This defines a __Clustering
+We need a method to identify particles which may be the constituents of a jet. This is referred to as a __Clustering
 Algorithm__. A good jet algorithm is _infrared and collinear safe_. The set of hard jets should be unchanged by soft emission and collinear splitting.
 
 ### Jet Clustering Algorithms
 
-Most jet algorithms at hadron colliders use a so-called "clustering sequence". This is essentially a pairwise examination of the input four vectors. If the pair satisfy some criteria, they are merged. The process is repeated until the entire list of constituents is exhausted. 
+Most jet algorithms at hadron colliders use a so-called "clustering sequence". This is essentially a pairwise examination of the input four vectors. If the pair satisfy some criteria, they are merged. The process is repeated until the entire list of particles is exhausted. 
 
 These algorithms follow this recipe:
- * iteratively find the two particles in the event which are closest in some distance measure and combine them. 
+ * Iteratively find the two particles in the event which are closest in some distance measure and combine them. 
  * Defining $$d_{ij} = min(p^{2p}_{ti},p^{2p}_{tj}) \Delta R^{2}_{ij}/R^2$$ and $d_{iB} = p_{ti}^{2p}$. We combine two particles if $d_{ij} < d_{iB}$. 
    * if $p=1$ then _kt algorithm_ (KT)
    * if $p=0$ then _Cambridge Aachen algorithm_ (CA)
@@ -76,12 +76,12 @@ These algorithms follow this recipe:
  * Stop when $d_{ij} > d_{iB}$.
 
 <figure>
-  <img src="../fig/episode1/jets101_4.svg" alt="" style="width:50%">
+  <img src="../fig/episode1/jets101_4.svg" alt="" style="width:60%">
   <center><figcaption>A more visual way of think about the recluster algorithm.</figcaption></center>
 </figure>
 
 > ## How the different jet algorithms look like in our events?
-> <img src="../fig/episode1/JHEP04_2008_063.jpg" alt="" style="width: 600px;"/>
+> <img src="../fig/episode1/JHEP04_2008_063.jpg" alt="" style="width: 700px;"/>
 > Comparison of jet areas for four different jet algorithms, from "The anti-kt Clustering Algorithm" by Cacciari, Salam, and Soyez [JHEP04, 063 (2008), arXiv:0802.1189].
 {: .callout}
 
@@ -97,7 +97,7 @@ Some excellent references about jet algorithms can be found here:
 > The package used to implement the clustering algorithms in modern colliders is called __Fastjet__.
 > This package is used ubiquously in all reconstruction of jets, even though is sometimes hidden in
 > our reconstruction code. If you want to know more about Fastjet we encourange you to check their
-> website [www.fastjet.fr](www.fastjet.fr) in your free time.
+> website [www.fastjet.fr](https://fastjet.fr) in your free time.
 {: .keypoints}
 
 
