--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -19,7 +19,7 @@ keypoints:
 >
 > ~~~
 > cd <YOUR WORKING DIRECTORY>/notebooks/DAS/
-> source /cvmfs/sft.cern.ch/lcg/views/LCG_104/x86_64-centos7-gcc11-opt/setup.sh
+> source /cvmfs/sft.cern.ch/lcg/views/LCG_105/x86_64-el9-gcc11-opt/setup.sh
 > jupyter notebook --no-browser --port=8888 --ip 127.0.0.1
 > ~~~
 > {: .language-bash}
@@ -172,11 +172,11 @@ In CMS we recluster two types of PFJets:
  * CHS jets = “Charge Hadron Subtracted” jets = remove charged PF particles associated to non-primary vertices (remove charged pileup). These are the __default in Run 2__.
  * PUPPI jets = PF constituents have been weighted/removed by an algorithm (PUPPI) which is designed to remove pileup contamination (more info in PU section). These are the __default in Run 3__.
 
-<img src="../fig/episode1/jets101_5.svg" alt="" style="width:50%">
+<img src="../fig/episode1/jets101_5.svg" alt="" style="width:70%">
 
 > ## Full jet and MET reconstruction in CMS
 >
-> <img src="../fig/episode1/jets101_6.svg" alt="">
+> <img src="../fig/episode1/jets101_6.svg" alt="" style="width: 800px;">
 {: .callout}
 
 ### Exercise 1.2
