Update Jets_101 to coffea calver

--- a/notebooks/master/Jets_101.ipynb
+++ b/notebooks/master/Jets_101.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = \"root://cmseos.fnal.gov//store/user/cmsdas/2024/short_exercises/jets/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2520000/47A0D984-2D6F-0D42-B5CB-906786434349.root\"\n",
+    "fname = \"root://cmseos.fnal.gov//store/user/cmsdas/2024/short_exercises/jets/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2520000/47A0D984-2D6F-0D42-B5CB-906786434349.root: Events\"\n",
     "events = NanoEventsFactory.from_root( fname, schemaclass=JMENanoAODSchema).events()"
    ]
   },
@@ -98,19 +98,19 @@
     "    .Weight()\n",
     "    .fill(\n",
     "        jet_type=\"ak4\",\n",
-    "        pt=ak.flatten(events.Jet.pt),\n",
-    "        eta=ak.flatten(events.Jet.eta),\n",
-    "        phi=ak.flatten(events.Jet.phi),\n",
-    "        mass=ak.flatten(events.Jet.mass),\n",
-    "        area=ak.flatten(events.Jet.area)    \n",
+    "        pt=ak.flatten(events.Jet.pt.compute()),  # Compute Dask-Awkward array\n",
+    "        eta=ak.flatten(events.Jet.eta.compute()),  # Compute Dask-Awkward array\n",
+    "        phi=ak.flatten(events.Jet.phi.compute()),  # Compute Dask-Awkward array\n",
+    "        mass=ak.flatten(events.Jet.mass.compute()),  # Compute Dask-Awkward array\n",
+    "        area=ak.flatten(events.Jet.area.compute())  # Compute Dask-Awkward array\n",
     "    )\n",
     "    .fill(\n",
     "        jet_type=\"ak8\",\n",
-    "        pt=ak.flatten(events.FatJet.pt),\n",
-    "        eta=ak.flatten(events.FatJet.eta),\n",
-    "        phi=ak.flatten(events.FatJet.phi),\n",
-    "        mass=ak.flatten(events.FatJet.mass),\n",
-    "        area=ak.flatten(events.FatJet.area)\n",
+    "        pt=ak.flatten(events.FatJet.pt.compute()),  # Compute Dask-Awkward array\n",
+    "        eta=ak.flatten(events.FatJet.eta.compute()),  # Compute Dask-Awkward array\n",
+    "        phi=ak.flatten(events.FatJet.phi.compute()),  # Compute Dask-Awkward array\n",
+    "        mass=ak.flatten(events.FatJet.mass.compute()),  # Compute Dask-Awkward array\n",
+    "        area=ak.flatten(events.FatJet.area.compute())  # Compute Dask-Awkward array\n",
     "    )\n",
     ")\n"
    ]
@@ -172,24 +172,24 @@
     "    .Weight()\n",
     "    .fill(\n",
     "        jet_type=\"pf\",\n",
-    "        pt=ak.flatten(events.Jet.pt),\n",
-    "        eta=ak.flatten(events.Jet.eta),\n",
-    "        phi=ak.flatten(events.Jet.phi),\n",
-    "        mass=ak.flatten(events.Jet.mass)    \n",
+    "        pt=ak.flatten(events.Jet.pt.compute()),\n",
+    "        eta=ak.flatten(events.Jet.eta.compute()),\n",
+    "        phi=ak.flatten(events.Jet.phi.compute()),\n",
+    "        mass=ak.flatten(events.Jet.mass.compute())\n",
     "    )\n",
     "    .fill(\n",
     "        jet_type=\"gen\",\n",
-    "        pt=ak.flatten(events.GenJet.pt),\n",
-    "        eta=ak.flatten(events.GenJet.eta),\n",
-    "        phi=ak.flatten(events.GenJet.phi),\n",
-    "        mass=ak.flatten(events.GenJet.mass)    \n",
+    "        pt=ak.flatten(events.GenJet.pt.compute()),\n",
+    "        eta=ak.flatten(events.GenJet.eta.compute()),\n",
+    "        phi=ak.flatten(events.GenJet.phi.compute()),\n",
+    "        mass=ak.flatten(events.GenJet.mass.compute())\n",
     "    )\n",
     "    .fill(\n",
     "        jet_type=\"calo\",\n",
-    "        pt=ak.flatten(events.JetCalo.pt),\n",
-    "        eta=ak.flatten(events.JetCalo.eta),\n",
-    "        phi=ak.flatten(events.JetCalo.phi),\n",
-    "        mass=ak.flatten(events.JetCalo.mass)    \n",
+    "        pt=ak.flatten(events.JetCalo.pt.compute()),\n",
+    "        eta=ak.flatten(events.JetCalo.eta.compute()),\n",
+    "        phi=ak.flatten(events.JetCalo.phi.compute()),\n",
+    "        mass=ak.flatten(events.JetCalo.mass.compute())\n",
     "    )\n",
     ")\n"
    ]
@@ -231,10 +231,10 @@
     "    .Reg(20, 0, 100, name=\"mass\")\n",
     "    .Weight()\n",
     "    .fill(\n",
-    "        pt=ak.flatten(events.Jet.pt),\n",
-    "        eta=ak.flatten(events.Jet.eta),\n",
-    "        phi=ak.flatten(events.Jet.phi),\n",
-    "        mass=ak.flatten(events.Jet.mass)\n",
+    "        pt=ak.flatten(events.Jet.pt.compute()),\n",
+    "        eta=ak.flatten(events.Jet.eta.compute()),\n",
+    "        phi=ak.flatten(events.Jet.phi.compute()),\n",
+    "        mass=ak.flatten(events.Jet.mass.compute())\n",
     "    )\n",
     ")"
    ]
@@ -322,7 +322,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -336,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
