Update to CMSDAS June 2025 using LXPLUS

--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -14,12 +14,11 @@ keypoints:
 - "A jet is defined by its reclustering algorithm and its constituents. In current experiments, jets are reclusted using the anti-kt algorithm. Depending on their constituents, in CMS, we called jets reclustered from genparticles as GenJets, calorimeter clusters as CaloJets, and particle flow candidates as PFJets."
 ---
 
-
-> ## After following the instructions in the setup:
+> ## Remember on LXPLUS
 >
 > ~~~
 > cd <YOUR WORKING DIRECTORY>/notebooks/DAS/
-> source /cvmfs/sft.cern.ch/lcg/views/LCG_105/x86_64-el9-gcc11-opt/setup.sh
+> source /cvmfs/sft.cern.ch/lcg/views/LCG_107/x86_64-el9-gcc13-opt/setup.sh
 > jupyter notebook --no-browser --port=8888 --ip 127.0.0.1
 > ~~~
 > {: .language-bash}
@@ -31,7 +30,9 @@ keypoints:
 
 ### Jets as signatures of quarks and gluons
 
-Most collisions at hadron colliders involve quarks scattering. Protons contain quarks and gluons. Proton collisions are really gluon and quark collisions.
+Most collisions at hadron colliders involve quarks scattering.
+Protons contain quarks and gluons.
+Proton collisions are really gluon and quark collisions.
 
 <figure>
   <img src="../fig/episode1/jets101_1.svg" alt="" style="width:50%">
