--- a/notebooks/master/Pileup.ipynb
+++ b/notebooks/master/Pileup.ipynb
@@ -38,10 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = \"root://cmseos.fnal.gov//store/user/cmsdas/2024/short_exercises/jets/RunIISummer20UL18NanoAODv9/QCD_Pt-15to7000_TuneCP5_Flat2018_13TeV_pythia8/NANOAODSIM/FlatPU0to75_20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2550000/FC0443BA-3466-0F45-A38F-54B014867DEF.root\"\n",
-    "#fname = \"root://cmseos.fnal.gov//store/user/cmsdas/2024/short_exercises/jets/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2520000/47A0D984-2D6F-0D42-B5CB-906786434349.root\"\n",
-    "\n",
-    "events = NanoEventsFactory.from_root( fname, schemaclass=NanoAODSchema.v6).events()"
+    "fname = \"root://eosuser.cern.ch//eos/user/c/cmsdas/2025/jets/RunIISummer20UL18NanoAODv9/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/NANOAODSIM/20UL18JMENano_106X_upgrade2018_realistic_v16_L1v1-v1/2520000/47A0D984-2D6F-0D42-B5CB-906786434349.root: Events\"\n",
+    "events = NanoEventsFactory.from_root( fname, schemaclass=NanoAODSchema).events()"
    ]
   },
   {
@@ -67,10 +65,10 @@
     "    .Reg(100, 0, 101, name=\"npv\", label='NPV')\n",
     "    .Weight()\n",
     "    .fill(\n",
-    "        npu=events.Pileup.nPU,\n",
-    "        mu=events.Pileup.nTrueInt,\n",
-    "        rho=events.fixedGridRhoFastjetAll,\n",
-    "        npv= events.PV.npvs\n",
+    "        npu=events.Pileup.nPU.compute(),\n",
+    "        mu=events.Pileup.nTrueInt.compute(),\n",
+    "        rho=events.fixedGridRhoFastjetAll.compute(),\n",
+    "        npv= events.PV.npvs.compute()\n",
     "    )\n",
     ")"
    ]
@@ -144,13 +142,13 @@
     "    .Weight()\n",
     "    .fill(\n",
     "        pu='chs',\n",
-    "        pt=ak.flatten(jets.pt) ,\n",
-    "        eta=ak.flatten(jets.eta )\n",
+    "        pt=ak.flatten(jets.pt.compute()) ,\n",
+    "        eta=ak.flatten(jets.eta.compute())\n",
     "    )\n",
     "    .fill(\n",
     "        pu='puppi',\n",
-    "        pt=ak.flatten(jets_puppi.pt ),\n",
-    "        eta=ak.flatten(jets_puppi.eta )\n",
+    "        pt=ak.flatten(jets_puppi.pt.compute()),\n",
+    "        eta=ak.flatten(jets_puppi.eta.compute())\n",
     "    )\n",
     ")"
    ]
@@ -204,7 +202,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pu_weight = pu_weight_corr.evaluate( events.Pileup.nTrueInt.to_numpy(), 'nominal' )"
+    "nTrueInt_array = np.array(events.Pileup.nTrueInt.compute())\n",
+    "pu_weight = pu_weight_corr.evaluate(nTrueInt_array, 'nominal')"
    ]
   },
   {
@@ -227,7 +226,7 @@
     "    .Weight()\n",
     "    .fill(\n",
     "        puweight=pu_weight,\n",
-    "        pu=events.Pileup.nTrueInt.to_numpy()\n",
+    "        pu=events.Pileup.nTrueInt.compute().to_numpy()\n",
     "    )\n",
     ")"
    ]
@@ -276,7 +275,7 @@
     "    .Reg(99, 0, 100, name=\"npv\")\n",
     "    .Weight()\n",
     "    .fill(\n",
-    "        npv=events.PV.npvs.to_numpy(),\n",
+    "        npv=events.PV.npvs.compute().to_numpy(),\n",
     "        weight=pu_weight,\n",
     "    )\n",
     ").plot1d(density=True, ax=ax, label='w PUweight')\n",
@@ -286,7 +285,7 @@
     "    .Reg(99, 0, 100, name=\"npv\")\n",
     "    .Weight()\n",
     "    .fill(\n",
-    "        npv=events.PV.npvs.to_numpy(),\n",
+    "        npv=events.PV.npvs.compute().to_numpy(),\n",
     "    )\n",
     ").plot1d(density=True, ax=ax, label=\"wo PUweight\")\n",
     "\n",
@@ -320,9 +319,9 @@
     "    .Reg(10, 0, 10, name=\"jetId\")\n",
     "    .Weight()\n",
     "    .fill(\n",
-    "        pt=ak.flatten(events.Jet.pt),\n",
-    "        eta=ak.flatten(events.Jet.eta),\n",
-    "        jetId=ak.flatten(events.Jet.jetId),\n",
+    "        pt=ak.flatten(events.Jet.pt.compute()),\n",
+    "        eta=ak.flatten(events.Jet.eta.compute()),\n",
+    "        jetId=ak.flatten(events.Jet.jetId.compute()),\n",
     "    )\n",
     ")"
    ]
@@ -358,9 +357,9 @@
     "    .Reg(10, 0, 10, name=\"jetId\")\n",
     "    .Weight()\n",
     "    .fill(\n",
-    "        pt=ak.flatten(jets.pt),\n",
-    "        eta=ak.flatten(jets.eta),\n",
-    "        jetId=ak.flatten(jets.jetId),\n",
+    "        pt=ak.flatten(jets.pt.compute()),\n",
+    "        eta=ak.flatten(jets.eta.compute()),\n",
+    "        jetId=ak.flatten(jets.jetId.compute()),\n",
     "    )\n",
     ")"
    ]
@@ -393,7 +392,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -407,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
