Add warning that setup is required

--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -14,6 +14,11 @@ keypoints:
 - "A jet is defined by its reclustering algorithm and its constituents. In current experiments, jets are reclusted using the anti-kt algorithm. Depending on their constituents, in CMS, we called jets reclustered from genparticles as GenJets, calorimeter clusters as CaloJets, and particle flow candidates as PFJets."
 ---
 
+> ## Important
+>
+> Make sure you have followed the [setup instructions]({% link setup.md %}).
+{: .caution}
+
 > ## Remember on LXPLUS
 >
 > ~~~
